# headroom

./: .antigravityrules  .dockerignore  .env.example  .gitignore  .opencode-prompt  .pre-commit-config.yaml  .release-please-config.json  .tmp-stats.json  404.html  AGENTS.md  AGENT_TASKS.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIALIZATION_PLAN.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  E2E_TESTING.md  ENTERPRISE.md  Headroom-Pitch-Deck.pptx  IMPLEMENTATION_LOG.md  LICENSE  LICENSE-COMMERCIAL  LICENSING.md  LIVE_SAVINGS_CANARY_RUNBOOK.md  Makefile  NOTICE  PRIVACY.md  PRODUCTION_AUDIT_V2.md  PRODUCTION_FIX_PLAN.md  PRODUCT_ANALYSIS.md  PRODUCT_GUIDE.md  PROTECTION.md  README.md  RELEASE_READINESS.md  RELEASE_REPORT.md  RELEASE_STATUS.md  RENAME.md  (+81 more)
.agents/: AGENTS.md
.claude/: launch.json  settings.json
.claude-plugin/: marketplace.json
.codex/: config.toml  hooks.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.memory.yml  post-create.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.playwright-mcp/: page-2026-06-27T06-25-35-551Z.yml  page-2026-06-27T06-26-48-491Z.yml  page-2026-06-27T06-26-54-044Z.yml  page-2026-06-27T06-27-10-347Z.yml  page-2026-07-01T10-56-07-767Z.yml  page-2026-07-01T10-56-58-946Z.yml  page-2026-07-01T10-57-25-237Z.yml  page-2026-07-01T10-57-54-677Z.yml  page-2026-07-01T10-58-53-254Z.yml  page-2026-07-01T11-06-41-111Z.yml  page-2026-07-01T11-07-02-144Z.yml  page-2026-07-01T11-07-35-557Z.yml  page-2026-07-01T11-11-47-620Z.yml  page-2026-07-01T11-12-38-751Z.yml  page-2026-07-01T11-13-12-957Z.yml  page-2026-07-01T11-13-39-103Z.yml  page-2026-07-01T11-14-04-501Z.yml  page-2026-07-03T18-28-25-500Z.yml  page-2026-07-03T18-28-42-351Z.yml  page-2026-07-03T18-28-48-737Z.yml  page-2026-07-03T18-28-58-259Z.yml  page-2026-07-03T18-29-09-319Z.yml  page-2026-07-03T18-29-14-491Z.yml  page-2026-07-03T18-29-24-356Z.yml  page-2026-07-03T18-29-29-950Z.yml  page-2026-07-03T18-31-55-366Z.yml
.serena/: project.yml
.slim/: codemap.json
ARCHITECTURE/: index.html
LATENCY_BENCHMARKS/: index.html
LIMITATIONS/: index.html
MOAT/: 00-overview.md  01-data-flywheel.md  02-memory-switching-costs.md  03-control-plane-of-record.md  04-counter-positioning.md  INDEX.md  NEXT-STEPS-PHASE-2.md  NEXT-STEPS-PHASE-3-PLUS.md  NEXT-STEPS.md  SOFTWARE-PROTECTION.md
agno/: index.html
api/: index.html
artifacts/: 50-client-outreach-plan.md  CASE_STUDY_TEMPLATE.md  COMMERCIALIZATION_EXECUTION_KIT.md  COMMERCIALIZATION_MEMO.md  COMMERCIALIZATION_PLAN.md  COMMERCIAL_RELEASE_AUDIT.md  CUSTOMER_ONBOARDING_RUNBOOK.md  DEEP_PRODUCT_AUDIT.md  FULL_E2E_AUDIT.md  FULL_PRODUCT_AUDIT.md  FULL_QA_PROD_AUDIT.md  IMPLEMENTATION_HANDOFF.md  IMPLEMENTATION_STATUS_CHECKLIST.md  LAUNCH_CHECKLIST.md  LEGAL_AND_PROCUREMENT_CHECKLIST.md  OPERATIONAL_RUNBOOK.md  ORDER_FORM_TEMPLATE.md  PILOT_OFFER_TEMPLATE.md  PROCUREMENT_PACKET_INDEX.md  PRODUCTION_AUDIT.md  PRODUCT_CAPABILITY_MATRIX.md  README.md  SALES_PLAYBOOK.md  SECURITY_QUESTIONNAIRE_WORKSHEET.md  SECURITY_REVIEW_PACKET.md  SUPPORT_POLICY_AND_SLA.md  TIMEOUT_INTERACTION_MATRIX.md  TOKEN_COST_INTEGRATIONS_STRATEGY_AND_SPEC.md  agent-context-report.json  agent-context-report.md  agent-context-smoke-report.json  agent-context-smoke-report.md  benchmark-breadth.json  benchmark-breadth.md  benchmark-release-bundle.json  benchmark-release-manifest.json  best-in-class-evidence-packet.md  buyer-report-smoke.json  buyer-report-smoke.md  code-benchmark-refresh.json  (+56 more)
audit/: PHASE6_REPORT.md  accessibility-analysis.md  action-plan.md  agent-memory-analysis.md  application-functionality-map.md  architecture-analysis.md  audit-chain-hmac-cython-rebuild-required-2026-07-02.md  audit-deep-2026-06-21.md  audit-reconciliation-2026-06-21.md  audit-verification-2026-06-30.md  backend-analysis.md  best-in-class-implementation-spec.md  bug-report.md  code-review-report.md  commercial-readiness-remediation-runbook.md  commercialization-report.md  competitive-analysis.md  competitive-gap-analysis-2026-07-06.md  competitor-report-2026-07-17.md  competitor-report.md  comprehensive-capability-report.md  comprehensive-qa-execution-2026-07-11.md  comprehensive-release-competitive-audit-2026-07-13.md  consolidated-roadmap-2026-07-10.md  consolidated-roadmap.md  (+74 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_diff_compressor.rs  fuzz_live_zone_anthropic.rs  fuzz_smart_crusher.rs
packaging/cutctx-ee/: cutctx_ee  pyproject.toml  setup.py
packaging/headroom-ee/: README.md  headroom_ee  pyproject.toml  setup.py
(+3372 files in other folders)
