# Build configuration for the PROPRIETARY `cutctx-ee` distribution.
#
# `cutctx_ee/` in this directory is a SYMLINK to the repo-root `cutctx_ee/`
# package. The canonical source stays at the repo root (importable in local dev
# because the OSS package uses `python-source = "."`), while this directory gives
# uv/hatchling a clean, editable-installable distribution with no parent-path tricks.
#
# Build:        cd packaging/cutctx-ee && uv build        (or: python -m build)
# Editable dev: handled by the uv workspace ([tool.uv.workspace] in the root pyproject)
#               -> `uv sync --extra ee`

[build-system]
requires = ["setuptools>=61.0", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutctx-ee"
version = "0.26.1"
description = "Cutctx commercial (enterprise edition) components — proprietary, All Rights Reserved."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-Cutctx-Commercial" }
authors = [{ name = "Payzli Inc. (operating as Cutctx Labs)" }]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cutctx-ai",              # the open-source Apache-2.0 client (published as cutctx-ai; legacy cutctx-ai remains compatible)
    "cryptography>=41.0.0",   # trial/seat state + license verification
    "PyJWT[crypto]>=2.8.0",   # required for SSO OIDC signature verification (Blocker-4 fix in cutctx_ee/sso.py)
]

[project.urls]
Homepage = "https://cutctxlabs.ai"

[tool.setuptools]
packages = ["cutctx_ee"]
